--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "license": "MPL-2.0",
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "build": "bunx react-router build",
+    "dev": "bunx react-router dev",
+    "start": "bun ./build/server/index.js",
+    "typecheck": "bunx react-router typegen && bunx tsc"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
