--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_YnJpZWYtZ3VwcHktNTYuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_q1QrUiG4oouINB7qwqAFNpjZrfjAnSyCcpI7Vka5p9
+VITE_API_URL=http://localhost:8080
+VITE_CLERK_SIGN_IN_URL=/
+VITE_CLERK_SIGN_UP_URL=/
+VITE_CLERK_AFTER_SIGN_IN_URL=/chat
+VITE_CLERK_AFTER_SIGN_UP_URL=/chat
