--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-  "name": "encore-ts-starter",
+  "name": "kepler-chat",
   "private": true,
   "version": "0.0.1",
-  "description": "Encore Typescript Starter",
+  "description": "Kepler Chat AI",
   "license": "MPL-2.0",
   "type": "module",
   "scripts": {
-    "build": "bunx react-router build",
+    "build": "bunx react-router build -c vite.config.ts && rm -rf api/frontend/assets/* && mv build/client/* api/frontend/assets/",
     "dev": "bunx react-router dev",
     "start": "bun ./build/server/index.js",
-    "typecheck": "bunx react-router typegen && bunx tsc"
+    "gen": "encore gen client --output=./app/lib/client.ts --env=local"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
-    "typescript": "^5.2.2",
     "@react-router/serve": "^7.5.1",
-    "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.1"
   },
   "dependencies": {
     "@clerk/backend": "^1.29.1",
+    "@clerk/clerk-react": "^5.28.2",
+    "@radix-ui/react-avatar": "^1.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.9",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@react-router/dev": "^7.5.1",
     "@react-router/node": "^7.5.1",
     "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "encore.dev": "^1.46.19",
     "isbot": "^5",
+    "lucide-react": "^0.501.0",
     "react-router-devtools": "^1.1.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.0",
+    "tw-animate-css": "^1.2.6",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
