--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
     "target": "ES2022",
     "module": "ES2022",
     "types": ["node"],
+    "jsx": "react-jsx",
     "paths": {
-      "~encore/*": ["./encore.gen/*"]
+      "~encore/*": ["./encore.gen/*"],
+      "@/*": ["./*"]
     },
 
     /* Workspace Settings */
