--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "gen": "encore gen client --output=./app/lib/client.ts --env=local"
   },
   "devDependencies": {
-    "@types/node": "^20.5.7",
     "@react-router/serve": "^7.5.1",
+    "@types/node": "^20.5.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.1"
@@ -27,6 +27,7 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@react-router/dev": "^7.5.1",
     "@react-router/node": "^7.5.1",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
@@ -35,6 +36,7 @@
     "encore.dev": "^1.46.19",
     "isbot": "^5",
     "lucide-react": "^0.501.0",
+    "react-redux": "^9.2.0",
     "react-router-devtools": "^1.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.0",
