--- a/package.json
+++ b/package.json
@@ -13,14 +13,22 @@
   },
   "devDependencies": {
     "@react-router/serve": "^7.5.1",
+    "@types/bun": "^1.2.10",
+    "@types/geojson": "^7946.0.16",
     "@types/node": "^20.5.7",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.1"
+    "react-router": "^7.5.1",
+    "vitest": "^3.1.2"
   },
   "dependencies": {
     "@clerk/backend": "^1.29.1",
     "@clerk/clerk-react": "^5.28.2",
+    "@langchain/community": "^0.3.41",
+    "@langchain/openai": "^0.5.6",
+    "@langchain/tavily": "^0.1.1",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.0",
@@ -29,12 +37,12 @@
     "@react-router/node": "^7.5.1",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.0.0",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "encore.dev": "^1.46.19",
+    "geojson": "^0.5.0",
     "isbot": "^5",
+    "langchain": "^0.3.23",
     "lucide-react": "^0.501.0",
     "react-redux": "^9.2.0",
     "react-router-devtools": "^1.1.0",
