--- a/.env
+++ b/.env
@@ -5,3 +5,12 @@ VITE_CLERK_SIGN_IN_URL=/
 VITE_CLERK_SIGN_UP_URL=/
 VITE_CLERK_AFTER_SIGN_IN_URL=/chat
 VITE_CLERK_AFTER_SIGN_UP_URL=/chat
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://keplerchat-ysa2:shadow-d021i6pv35uf615n3jrg@127.0.0.1:9500/hackathon?sslmode=disable"
