--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "bunx react-router build -c vite.config.ts && rm -rf api/frontend/assets/* && mv build/client/* api/frontend/assets/",
     "dev": "bunx react-router dev",
     "start": "bun ./build/server/index.js",
-    "gen": "encore gen client --output=./app/lib/client.ts --env=local"
+    "gen": "encore gen client --output=./app/lib/client.ts --env=local",
+    "postinstall": "bunx prisma generate --schema=api/data/prisma/schema.prisma"
   },
   "devDependencies": {
     "@react-router/serve": "^7.5.1",
@@ -27,8 +28,10 @@
     "@clerk/backend": "^1.29.1",
     "@clerk/clerk-react": "^5.28.2",
     "@langchain/community": "^0.3.41",
+    "@langchain/langgraph": "^0.2.65",
     "@langchain/openai": "^0.5.6",
     "@langchain/tavily": "^0.1.1",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.0",
@@ -44,6 +47,7 @@
     "isbot": "^5",
     "langchain": "^0.3.23",
     "lucide-react": "^0.501.0",
+    "prisma": "^6.6.0",
     "react-redux": "^9.2.0",
     "react-router-devtools": "^1.1.0",
     "tailwind-merge": "^3.2.0",
@@ -51,6 +55,7 @@
     "tw-animate-css": "^1.2.6",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^3.24.3"
   }
 }
