Lots of changes

--- a/package.json
+++ b/package.json
@@ -42,18 +42,20 @@
     "@tailwindcss/vite": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "encore.dev": "^1.46.19",
+    "encore.dev": "^1.46.20",
     "geojson": "^0.5.0",
     "isbot": "^5",
     "langchain": "^0.3.23",
-    "lucide-react": "^0.501.0",
+    "lucide-react": "^0.503.0",
     "prisma": "^6.6.0",
     "react-redux": "^9.2.0",
     "react-router-devtools": "^1.1.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.0",
     "tw-animate-css": "^1.2.6",
     "typescript": "^5.7.2",
+    "uuid": "^11.1.0",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.24.3"
