--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
   "dependencies": {
     "@clerk/backend": "^1.29.1",
     "@clerk/clerk-react": "^5.28.2",
+    "@hookform/resolvers": "^5.0.1",
     "@langchain/community": "^0.3.41",
     "@langchain/langgraph": "^0.2.65",
     "@langchain/openai": "^0.5.6",
     "@langchain/tavily": "^0.1.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-avatar": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
@@ -49,6 +52,7 @@
     "langchain": "^0.3.23",
     "lucide-react": "^0.503.0",
     "prisma": "^6.6.0",
+    "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
     "react-router-devtools": "^1.1.0",
     "recharts": "^2.15.3",
