--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "encore.dev": "^1.46.20",
     "geojson": "^0.5.0",
     "isbot": "^5",
