--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@clerk/backend": "^1.29.1",
     "@clerk/clerk-react": "^5.28.2",
     "@hookform/resolvers": "^5.0.1",
+    "@kepler.gl/components": "^3.1.1",
+    "@kepler.gl/reducers": "^3.1.1",
     "@langchain/community": "^0.3.41",
     "@langchain/langgraph": "^0.2.65",
     "@langchain/openai": "^0.5.6",
@@ -57,6 +59,7 @@
     "lucide-react": "^0.503.0",
     "prisma": "^6.6.0",
     "react-hook-form": "^7.56.1",
+    "react-palm": "^3.3.8",
     "react-redux": "^9.2.0",
     "react-router-devtools": "^1.1.0",
     "recharts": "^2.15.3",
